worked on customer account

--- a/Store/Templates/Store/admin/index.html
+++ b/Store/Templates/Store/admin/index.html
@@ -26,7 +26,15 @@
       ORDERS
     </td>
     <td>
-      INVENTORY
+        <a href="admin/inventory"> INVENTORY</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      GENRE
+    </td>
+    <td>
+      Publisher
     </td>
   </tr>
 </table>
