--- a/Store/Templates/Store/customer/index.html
+++ b/Store/Templates/Store/customer/index.html
@@ -12,6 +12,6 @@
 <h1>Welcome {{username}}</h1>
 {{user_id}}
 <form request="POST">
-        <a href="customer/customeraccount/{{user_id}}"> Manage Account</a>
+        <a href="customer/customeraccount"> Manage Account</a>
    </form></b>
 {% endblock %}
