--- a/Store/Templates/Store/login.html
+++ b/Store/Templates/Store/login.html
@@ -10,7 +10,7 @@
       <div class="card">
         <div class="card-content black-text">
           <span class="card-title">
-            <b>Sign in</b>
+            <b>Sign in</b> {{text}}
           </span>
           <div class="row">
             <div class="input-field col s8">
@@ -27,7 +27,6 @@
             </div>
           </div>
         </div>
-        {{text}}
         <div class="card-action">          
           <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="login-user">Submit</button>
         </div>
