--- a/Store/Templates/Store/customer/cart.html
+++ b/Store/Templates/Store/customer/cart.html
@@ -42,9 +42,7 @@
             <h6>Cart total: ${{ cart_total }}</h6>
         </div>
         <div class="row">        
-            <button class="btn">
-                Check out
-            </button>
+            <a class="btn" href="{% url 'ship_pay' %}">Check out</a>
         </div>
     </div>
 </div>
