Fixed the update part for customer address

--- a/Store/Templates/Store/customer/caddressaccount.html
+++ b/Store/Templates/Store/customer/caddressaccount.html
@@ -11,7 +11,7 @@
 {% block content %}
 <h6>
 <form method="POST" name='go-back'>
-<a href='customeraccount'> Return to Account Overview</a>
+<a href="{% url 'customeraccount' %}"> Return to Account Overview</a>
 </form>
 </h6>
 <div class="row">
@@ -57,7 +57,7 @@
     {% endif %}
 </div>
 <div id="editAddress" class="modal">
-    <form request="POST" class="col s6" >
+    <form method="POST" class="col s6" >
     {% csrf_token %} 
     {{ eaddress.non_field_errors }}
     <div class="modal-content">
@@ -90,7 +90,7 @@
     </div>
     <div class="modal-footer">
         <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-        <button type="submit" class="modal-action waves-effect waves-green btn-flat" name ="edit-address" >Update</button>
+        <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="edit-address">Update</button>
     </div>
     </form>
 </div>
