--- a/Store/Templates/Store/customer/checkout.html
+++ b/Store/Templates/Store/customer/checkout.html
@@ -20,10 +20,10 @@
 <div class="section"></div>
 <div class="row">
     <div class="col s6">
-
+        {{payment_choice}}
     </div>
     <div class="col s6">
-
+        {{shipping_choice}}
     </div>
 </div>
 
