--- a/Store/Templates/Store/admin/index.html
+++ b/Store/Templates/Store/admin/index.html
@@ -8,10 +8,10 @@
 {% endblock %} 
 
 {% block content %}
-<h1 align="middle">ADMIN</h1>
+<h1 align="middle">Admin Management Page</h1>
 <table>
   <tr>
-    <thead>Manage</thead>
+   
   </tr>
   <tr>
     <td>
@@ -23,18 +23,18 @@
   </tr>
   <tr>
     <td>
-      ORDERS
-    </td>
+        <a href="admin/orders"> ORDERS</a>
+      </td>
     <td>
         <a href="admin/inventory"> INVENTORY</a>
     </td>
   </tr>
   <tr>
     <td>
-      GENRE
+      <a href="admin/genres"> GENRES </a>
     </td>
     <td>
-      Publisher
+        <a href="admin/publishers">PUBLISHERS</a>
     </td>
   </tr>
 </table>
