--- a/Store/Templates/Store/admin/customers/details.html
+++ b/Store/Templates/Store/admin/customers/details.html
@@ -3,10 +3,10 @@
 <h3>{{customer.user.first_name}} {{customer.user.last_name}}</h3>
 <div class="row">
         <div class="col s12 m6">
-          <div class="card  grey lighten-3">
-            <div class="card-content black-text">
+          <div class="card">
+            <div class="card-content">
               <span class="card-title">General Customer Information</span>
-              
+              <p>
                   CustomerID: {{customer.customer_id}} <br>
                   Username: {{customer.user.username}} <br>
                   E-mail: {{customer.user.email}} <br>
