--- a/Store/Templates/Store/customer/addcard.html
+++ b/Store/Templates/Store/customer/addcard.html
@@ -17,40 +17,91 @@
 </h6>
 
 <form method="POST" class="col s6 m6" >
-        {% csrf_token %} 
-        {{ addcard.non_field_errors }}
-        
-            <h4>Add New Credit Card</h4>
-            <div class="input-field  col s6 m6">
-                {{addcard.card_number.errors}}
-                <label for="{{ addcard.card_number.id_for_label }}">Credit Card Number</label>
-                {{addcard.card_number}}
-            </div>
-            <div class="input-field  col s4">
-                {{addcard.cvc.errors}}
-                <label for="{{ addcard.cvc.id_for_label }}">CVC</label>
-                {{addcard.cvc}}
-            </div>
-            <div class="input-field  col s6">
-                    {{addcard.expir_date.errors}}
-                    <label for="{{ addcard.expir_date.id_for_label }}">Expiration Date</label>
-                    {{addcard.expir_date|add_class:"datepicker" }}
-                </div>
-            <div class="input-field  col s6">
-                {{addcard.card_issuer.errors}}
-                <label for="{{ addcard.card_issuer.id_for_label }}">Card Issuer</label>
-                {{addcard.card_issuer}}
-            </div>
-            {{ billingAddress.non_field_errors }}
-            <div class="input-field  col s6">
-                    {{billingAddress.addresss.card_issuer.errors}}
-                    {{billingAddress.addresss.card_issuer}}
-                </div>
+{% csrf_token %} 
+{{ addcard.non_field_errors }}
 
-    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-    <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="add-card">Add</button>
+    <h4>Add New Credit Card</h4>
+    <div class="input-field  col s6 m6">
+        {{addcard.card_number.errors}}
+        <label for="{{ addcard.card_number.id_for_label }}">Credit Card Number</label>
+        {{addcard.card_number}}
+    </div>
+    <div class="input-field  col s4">
+        {{addcard.cvc.errors}}
+        <label for="{{ addcard.cvc.id_for_label }}">CVC</label>
+        {{addcard.cvc}}
+    </div>
+    <div class="input-field  col s6">
+            {{addcard.expir_date.errors}}
+            <label for="{{ addcard.expir_date.id_for_label }}">Expiration Date</label>
+            {{addcard.expir_date|add_class:"datepicker" }}
+        </div>
+    <div class="input-field  col s6">
+        {{addcard.card_issuer.errors}}
+        <label for="{{ addcard.card_issuer.id_for_label }}">Card Issuer</label>
+        {{addcard.card_issuer}}
+    </div>
+        <div class="col s6">
+            <div class="section">
+                <h5>
+                 Billing Address <a class="modal-trigger " href="#addAddress">
+                <i class="small material-icons">add_circle</i></a>
+                </h5> 
+            </div>
+<div class="section">
+    {% for address in addcard.billing_addresses %}
+    <div class="row">
+        <div class="col s12">
+            <li class="card-item">
+                <label>
+                    {{address.tag}}
+                    <span>{{address.choice_label}}</span>
+                </label>
+            </li>
+        </div>               
+    </div>
+    {% endfor %}
+    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat" name="go-back">Cancel</a>
+    <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="add-card">Add New Card</button>
 
 </form>
+<div id="addAddress" class="modal">
+        <form method="POST" class="col s12">
+            {% csrf_token %} 
+            {{ aaddress.non_field_errors }}
+            <div class="modal-content">
+                <div class="input-field col s6">
+                    {{ aaddress.street.errors }}
+                    <label for="{{ aaddress.street.id_for_label }}">Street</label>
+                    {{ aaddress.street }}
+                </div>
+                <div class="input-field col s6">
+                    {{ aaddress.city.errors }}
+                    <label for="{{ aaddress.city.id_for_label }}">City</label>
+                    {{ aaddress.city }}
+                </div>
+                <div class="input-field col s6">
+                    {{ aaddress.state_code.errors }}                        
+                    {{ aaddress.state_code }}
+                    <label>State</label>       
+                </div>
+                <div class="input-field col s6">
+                    {{ aaddress.zip_code.errors }}
+                    <label for="{{ aaddress.zip_code.id_for_label }}">Zip Code</label>
+                    {{ aaddress.zip_code }}       
+                </div>
+                <div class="input-field col s6">
+                    {{ aaddress.address_type.errors }}
+                    {{ aaddress.address_type }}    
+                    <label>Address Type</label>   
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+                <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="add-address">Add</button>
+            </div>
+        </form>
+  </div>
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/books.js" %}"></script> 
