--- a/Store/Templates/Store/customer/customeraccount.html
+++ b/Store/Templates/Store/customer/customeraccount.html
@@ -1,7 +1,9 @@
 {% extends 'Store/layout.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %}
-
+{% block head %}
+<link href="{% static "css/checkout.css" %}" type="text/css" rel="stylesheet">
+{% endblock %}
 {% block nav %}
   {% if user_id is none %}
     <li>You are currently logged out</li>
@@ -12,30 +14,28 @@
 
 {% block content %}
 
-
-    <div class="row">
-      <div class="col s12 m7">
-          <h3>Welcome {{username}} </h3>
-      </div>
-      <div class="col s12 m5">
-          <div class="card">
-              <div class="card-content">
-                  <span class="card-title"><b>General Information</b></span>
-                    <ul>
-                        <li><b>Name:</b> {{customer.user.first_name}} {{customer.user.last_name}}</li>
-                        <li><b>E-mail:</b> {{customer.user.email}} </li>
-                        <li><b>Home:</b> {{customer.home_phone}} Work: {{customer.work_phone}}</li>
-                        <li><b>Date Joined:</b> {{customer.user.date_joined}}</li>
-                    </ul>          
-              </div>  
-              <div class="card-action">
-                  <a class="modal-trigger btn" href="#editinfo">Edit</a>
-                  <a class="modal-trigger" href="#changeusernamepassword"> Change Username and Password</a>
-                </div>          
-          </div>
-      </div>
-  </div>
-  <div class="row">
+    <h3>Welcome {{username}} </h3>
+<div class="row">
+<div class="col s12 m5">
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title"><b>General Information</b> 
+            <a class="modal-trigger " href="#editinfo"><i class="material-icons">edit</i></a></span>
+            <ul>
+                <li><b>Name:</b> {{customer.user.first_name}} {{customer.user.last_name}}</li>
+                <li><b>E-mail:</b> {{customer.user.email}} </li>
+                <li><b>Home:</b> {{customer.home_phone}} Work: {{customer.work_phone}}</li>
+                <li><b>Date Joined:</b> {{customer.user.date_joined}}</li>
+            </ul>          
+        </div>  
+        <div class="card-action">
+        <ul>
+            <li><a class="modal-trigger" href="#changeusernamepassword"> Change Username and Password</a></li> 
+            <li><a class="modal-trigger" href="#deactivateaccount" > Deactivate Account</a></li> 
+        </ul>
+        </div>          
+    </div>
+</div>
   <div class="col s12 m7">
         <div class="card">
             <div class="card-content">
@@ -63,33 +63,57 @@
                   </div>     
             </div>       
         </div>
-    </div>
-    <div class="col s12 m5">
-            <div class="card">
-                <div class="card-content">
-                    <span class="card-title"><b>Payment Information</b></span>
-                    <table>
-                            <tr>
-                            <thead>
-                                  <td>Cards on File</td>
-                            </thead> 
-                          </tr>
-                            {% for p in payment %}
-                              <tr>
-                                 <td>{{p.card_issuer}} ending in {{p.last_four}}</td>
-                                  <td><a class="modal-trigger " href='#editCard{{ca.address_id}}'><i class=" tiny material-icons">edit</i></a></td>
-                                  <td><a class="modal-trigger " href='#deleteCard{{ca.address_id}}'><i class=" tiny material-icons">close</i></a></td>
-                              </tr>
-                            {% endfor %}
-                      </table>    
-                    <div class="card-action">
-                        <a class="modal-trigger btn " href="addcard"><i class=" material-icons">add_box</i></a>
-                      </div>     
-                </div>       
-            </div>
-        </div>
+    </div> 
 </div>
-
+<div class="row">
+    <div class="col s12 m5">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title"><b>Order History</b></span>
+                <table>
+                    <tr>
+                        <thead>
+                              <td>Order Number</td>
+                              <td> Order Date</td>
+                        </thead> 
+                      </tr>
+                    </tr>
+                          <tr>
+                             <td> Order Number </td>
+                             <td>Order Date</td>
+                          </tr>
+                  </table>    
+            </div>       
+        </div>
+    </div>
+<div class="col s12 m5">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title"><b>Payment Information</b></span>
+                <table>
+                        <tr>
+                        <thead>
+                                <td>Cards on File</td>
+                                <td> </td>
+                        </thead> 
+                        </tr>
+                        {% for p in payment %}
+                            <tr>                              
+                                <form request="POST" name="card-detail"> 
+                                    <td>{{p.card_issuer}} </td>                           
+                                <td><a href='ccard/{{p.card_id}}'>ending in {{p.last_four}}</a></td>
+                                
+                                </form>
+                            </tr>
+                        {% endfor %}
+                    </table>    
+                <div class="card-action">
+                    <a class="modal-trigger btn " href="addcard"><i class=" material-icons">add_box</i></a>
+                    </div>     
+            </div>       
+        </div>
+    </div>
+</div>
   <div id="editinfo" class="modal">
       <form method="POST" class="col s12">
           {% csrf_token %} 
@@ -173,7 +197,7 @@
             </div>
         </form>
   </div>
-  <div id="changeusernamepassword">
+  <div id="changeusernamepassword" class ="modal">
         <form method="POST" class="col s12">
                 {% csrf_token %} 
                 {{ Cuserpass.non_field_errors }}
@@ -199,6 +223,18 @@
                     <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="changeusernamepassword">Update</button>
                 </div>
             </form>
+  </div>
+  <div id="deactivateaccount" class ="modal">
+<form method="POST" class="col s12">
+    {% csrf_token %} 
+    <div class="modal-content">
+        <h2> Verify Deactive Account </h2>
+        <h5>At any point you wish to reactivate your account, just re-login with your credentials</h5>
+    <div class="modal-footer">
+        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+        <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="deactivate">Deactivate Account</button>
+    </div>
+    </form>
   </div>
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
